--- a/asserts/style.css
+++ b/asserts/style.css
@@ -1,5 +1,5 @@
 body{
-    margin: 0;
+    margin: 2px 5px;
     padding: 0;
     /* background-color: lightgray; */
     background: linear-gradient(#b7dbdb, #aed4d4,#b7dbdb, #bce4e4,#b7dbdb,#b7dbdb, #66bfbf);
@@ -9,15 +9,13 @@ a{
     text-decoration: none;
     color: lightslategray;
 }
-a:hover{
 
-}
 hr{
     margin: none;
-    margin: 100px auto;
+    margin: 50px auto;
     border: none;
     border-top: dotted gray 10px;
-    width: 200px;
+    width: 100px;
 
 }
 
@@ -33,27 +31,27 @@ hr{
     justify-content: flex-end;
 
 }
+
 button{
     background: rgb(56, 55, 56);
     border-radius: 5px;
     font-size: medium;
-    max-height: 40px;
-}
+    max-height: 40px;}
+
 button:hover{
     background-color: rgb(67, 18, 99);
     font-size: large;
     
 }
 
-
-/*============================= whole=========================== */
+/*#############################====  whole ====############################# */
 .whole{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: .1fr 4fr .05fr;
+    grid-template-rows: .05fr 4fr .01fr;
     grid-template-areas:
     "header header header header header header"
-    "main main main main main article"
+    "main main main main main aside"
     "footer footer footer footer footer footer"
     ;
     border: lightsalmon solid 5px;
@@ -74,7 +72,8 @@ header{
     border: darkgray solid 3px;
 }
 
-/*================================== main============================ */
+
+/*#############################==== main ====############################# */
 main{
     grid-area: main;
     border: darkgray solid 3px;
@@ -83,52 +82,51 @@ main{
 
 /*=================================== .block1=================================== */
 .block1{
-    display: flex;
-    justify-content: flex-start;
+    display: grid;
+    justify-content: space-around; 
+    grid-template-columns: 1fr 1fr 3.5fr;
+    grid-template-rows: auto;
+
+}
+.block1 div{
+    border: rgb(97, 87, 93) solid 2px;
 
 }
 
 
 .profile-pic{
-    height: 300px;
-    width: 200px;
+   max-height: 300px;
+    max-width: 250px;
     border: solid gray 5px;
 
 }
 
-.name{
+
+.name{   
     font-size: 40px;
     font-weight: 600;
     line-height: 1.5;
 
 }
 
-nav{
+ .nav-btn {
     position: sticky;
-    top: 0;
+    top: 10;
     display:flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     
-}
+} 
 
 
-nav a{
+.nav-btn a{
     text-decoration: none;
     justify-content: space-around;
     border-radius: 5px;
 
 }
-nav a:hover{
 
-}
 
-nav button{
-    background: rgb(56, 55, 56);
-    border-radius: 5px;
-    font-size: medium;
-    max-height: 40px;
-    margin:0 auto;
-}
     /*============================ block: 2;================================ */
  .block2{
      display: flex;
@@ -148,12 +146,12 @@ nav button{
  }
 
  .block2 img{
-     max-width: 350px;
+     max-width: 250px;
      height: 200px;
      border: gray solid 3px;
      border-radius: 40%;
  }
-
+/*================================ .block3 ================================*/
  .block3{
      display: flex;
      justify-content: space-evenly;
@@ -173,24 +171,124 @@ nav button{
 
  .block3 img{
     max-width: 250px;
-    height: 300px;
+    height: 250px;
     border: gray solid 3px;
     border-radius: 50%;
 }
 
+/*========================== block4 projects and blogs================================= */
+.block4{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
 
+.block4 img{
+    max-width: 200px;
+    height: 200px;
+    border: gray solid 3px;
+    border-radius: 50%;
+}
+
+.block4 div{
+    display: flex;
+    line-height: 1.5;
+    border: rgb(241, 233, 233) solid 5px;
+    max-width: 250px;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+ }
+
+ /*=============================== block5 hobbies ===========================*/
+.block5 .hobby{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    border: transparent solid 2px;
+    text-align: center;
+}
+
+
+ /* .block5{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    
+}
+.block5 div{
+    border:transparent solid 2px;
+    justify-content: center;
+    text-align: center;
+    text-overflow: hidden;
+}
+
+.block5 .sections{
+    grid-area: 1/1/2/4;
+    border: none;
+} */
+
+.block5 img{
+    max-width: 300px;
+    height: auto;
+    border-radius: 5px;
+}
+
+/*=============================== block6 links and forms================================= */
+.block6 .links-forms{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+/*============================= links =============================*/
+.links{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+
+/*========================================= form===================================== */
+fieldset{
+    border: wheat solid 3px;
+    border-radius: 10px;
+}
+legend{
+text-align: center;
+text-transform: capitalize;
+font-weight: 600;
+}
+
+form input{
+width: 200px;
+padding: 10px 70px 10px 30px;
+border-radius: 10px;
+border-style: inset;
+}
+.submit-btn{
+    text-align: center;
+padding: 10px;
+background-color: rgb(57, 88, 57);
+color: greenyellow;
+margin: 20px 0 0 50px;
+}
+textarea{
+    border-radius: 10px;
+}
+
+/*======================= general block styling =======================*/
 .block div:hover{
    transition:  transform translateY(30px);
 }
 
-/*================================== article============================= */
-article{
+/*#############################==== aside  ====############################# */ aside{
     display: flex;
-    grid-area: article;
+    grid-area: aside;
     border: darkgray solid 3px;
     flex-direction: column;
 }
-/*================================ footer=============================== */
+/*=###############################==== footer  ====############################### */
 footer{
     position: sticky;
     bottom: 0;
@@ -201,43 +299,50 @@ footer{
     background: rgb(145, 158, 167);
 }
 
-/*=================================== @media=============================== */
+/*###############################==== @media ====  ############################### */
 @media(max-width:600px) {
     body{
-        width: fit-content;
+        min-width: fit-content;
     }
     .whole{
-        grid-template-rows: .1fr 5fr .05fr ;
+        grid-template-rows: .5fr 5fr .01fr ;
         grid-template-columns: 5fr 1fr ;
 grid-template-areas: 
 "header header "
-"main article"
-"main article"
-"main article"
-"main article"
-"main article"
-"main article"
-"main article"
-"main article"
-"main article"
-"main article"
+"main aside"
+/* "main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside"
+"main aside" */
 "footer footer"
 ;
 min-width: fit-content;
     }
 
-nav{display: flex;
-    flex-direction: column;
+.nav-btn{display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 nav button{
     min-width: auto;
 }
-    .block2,.block3{
-
+.block1{display: grid;
+    max-width: auto;
+}
+     .block2,.block3,.block5 .block6{margin: auto;
       display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         max-width: fit-content;
+    
     }
 }
