--- a/asserts/style.css
+++ b/asserts/style.css
@@ -236,8 +236,10 @@ main{
 
 /*=============================== block6 links and forms================================= */
 .block6 .links-forms{
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    
+    justify-content: space-around;
 
 }
 
